infra/kustomize/core/manifests/prod.yml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: enabled
  name: app-a
---
apiVersion: v1
kind: Namespace
metadata:
  name: ext-a
---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
---
apiVersion: v1
kind: Namespace
metadata:
  name: sys-a
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cache-svc
  name: cache-svc
  namespace: ext-a
spec:
  ports:
  - name: cache-port
    port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    app: cache
---
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: metrics-server
  name: metrics-server
  namespace: kube-system
spec:
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: https
  selector:
    k8s-app: metrics-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cache
  namespace: ext-a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cache
  template:
    metadata:
      labels:
        app: cache
    spec:
      containers:
      - image: redis:latest
        imagePullPolicy: IfNotPresent
        name: cache
        ports:
        - containerPort: 6379
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 100Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: metrics-server
  name: metrics-server
  namespace: kube-system
spec:
  selector:
    matchLabels:
      k8s-app: metrics-server
  strategy:
    rollingUpdate:
      maxUnavailable: 0
  template:
    metadata:
      labels:
        k8s-app: metrics-server
    spec:
      containers:
      - args:
        - --cert-dir=/tmp
        - --secure-port=4443
        - --kubelet-insecure-tls
        - --kubelet-preferred-address-types=InternalIP,ExternalIP,Hostname
        - --kubelet-use-node-status-port
        image: k8s.gcr.io/metrics-server/metrics-server:v0.4.1
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /livez
            port: https
            scheme: HTTPS
          periodSeconds: 10
        name: metrics-server
        ports:
        - containerPort: 4443
          name: https
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /readyz
            port: https
            scheme: HTTPS
          periodSeconds: 10
        securityContext:
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1000
        volumeMounts:
        - mountPath: /tmp
          name: tmp-dir
      nodeSelector:
        kubernetes.io/os: linux
      priorityClassName: system-cluster-critical
      serviceAccountName: metrics-server
      volumes:
      - emptyDir: {}
        name: tmp-dir
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: liberator
  namespace: sys-a
spec:
  selector:
    matchLabels:
      app: liberator
  template:
    metadata:
      labels:
        app: liberator
      name: liberator
    spec:
      containers:
      - image: t3goto/liberator:0.1
        imagePullPolicy: IfNotPresent
        name: liberator
        resources:
          limits:
            cpu: 100m
            memory: 75Mi
          requests:
            cpu: 100m
            memory: 75Mi
      serviceAccountName: liberator
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: ingress-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - www.lratg.com
    port:
      name: http
      number: 80
      protocol: HTTP
  - hosts:
    - www.lratg.com
    port:
      name: https
      number: 443
      protocol: HTTP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-from-other-namespaces
  namespace: app-a
spec:
  ingress:
  - from:
    - podSelector: {}
  podSelector:
    matchLabels: null
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: expose-external
  namespace: app-a
spec:
  ingress:
  - from: []
  podSelector:
    matchLabels:
      app: expose
